Run ZK bundled with Kafka; cache the extracted Kafka package

--- a/circle.yml
+++ b/circle.yml
@@ -20,8 +20,9 @@ machine:
   java:
     version: openjdk8
   post:
-    - sudo apt-get update; sudo apt-get install zookeeperd
-    - curl -SL http://www.us.apache.org/dist/kafka/0.8.2.2/kafka_2.11-0.8.2.2.tgz | tar xz
+    - [[ -d kafka_* ]] || curl -SL http://www.us.apache.org/dist/kafka/0.8.2.2/kafka_2.11-0.8.2.2.tgz | tar xz
+    - ./kafka_*/bin/zookeeper-server-start.sh ./kafka_*/config/zookeeper.properties:
+        background: true
     - ./kafka_*/bin/kafka-server-start.sh ./kafka_*/config/server.properties:
         background: true
   environment:
@@ -29,7 +30,10 @@ machine:
 
 dependencies:
   override:
-  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+    - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  cache_directories:
+    - "kafka_*"
+
 
 database:
   override:
