How about this?

--- a/circle.yml
+++ b/circle.yml
@@ -20,7 +20,7 @@ machine:
   java:
     version: openjdk8
   post:
-    - [[ -d kafka_* ]] || curl -SL http://www.us.apache.org/dist/kafka/0.8.2.2/kafka_2.11-0.8.2.2.tgz | tar xz
+    - [ -d kafka_2.11-0.8.2.2 ] || curl -SL http://www.us.apache.org/dist/kafka/0.8.2.2/kafka_2.11-0.8.2.2.tgz | tar xz
     - ./kafka_*/bin/zookeeper-server-start.sh ./kafka_*/config/zookeeper.properties:
         background: true
     - ./kafka_*/bin/kafka-server-start.sh ./kafka_*/config/server.properties:
