Add ~/.npm to list of cache dirs
Apparently on the cache dirs of the auto-detected build system
are included by default

--- a/circle.yml
+++ b/circle.yml
@@ -34,6 +34,7 @@ dependencies:
     - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
   cache_directories:
     - "kafka_*"
+    - "~/.npm"
 
 
 database:
