Trying to set up parallel time-balanced test running

--- a/circle.yml
+++ b/circle.yml
@@ -36,13 +36,17 @@ dependencies:
     - "kafka_*"
     - "~/.npm"
 
-
 database:
   override:
     - mysql -u ubuntu -e 'SET GLOBAL innodb_file_format=Barracuda'
     - mysql -u ubuntu circle_test < zipkin-storage/mysql/src/main/resources/mysql.sql
 
 test:
+  override:
+    - ./circleci/test.sh:
+        parallel: true
+        files:
+          - **/test/**/*Test.java
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
