Maybe like this?

--- a/circle.yml
+++ b/circle.yml
@@ -46,7 +46,7 @@ test:
     - ./circleci/test.sh:
         parallel: true
         files:
-          - **/test/**/*Test.java
+          - "**/test/**/*Test.java"
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
