--- a/circle.yml
+++ b/circle.yml
@@ -20,7 +20,7 @@ machine:
   java:
     version: openjdk8
   post:
-    - if [[ ! -d kafka_* ]]; then curl -SL http://www.us.apache.org/dist/kafka/0.8.2.2/kafka_2.11-0.8.2.2.tgz | tar xz; fi
+    - curl -SL http://www.us.apache.org/dist/kafka/0.8.2.2/kafka_2.11-0.8.2.2.tgz | tar xz
     - ./kafka_*/bin/zookeeper-server-start.sh ./kafka_*/config/zookeeper.properties:
         background: true
     - ./kafka_*/bin/kafka-server-start.sh ./kafka_*/config/server.properties:
@@ -33,7 +33,6 @@ dependencies:
   override:
     - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
   cache_directories:
-    - "kafka_*"
     - "~/.npm"
 
 database:
