Be smarter about downloading dependencies

--- a/circle.yml
+++ b/circle.yml
@@ -31,7 +31,7 @@ machine:
 
 dependencies:
   override:
-    - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+    - ./circleci/go-offline.sh
   cache_directories:
     - "~/.npm"
 
