install-node-and-npm

--- a/circle.yml
+++ b/circle.yml
@@ -33,7 +33,7 @@ dependencies:
   override:
     - sudo apt-get install xsltproc
     - ./circleci/go-offline.sh
-    - ./mvnw frontend:npm -pl zipkin-ui
+    - ./mvnw frontend:install-node-and-npm frontend:npm -pl zipkin-ui
   cache_directories:
     - "~/.npm"
 
