--- a/circle.yml
+++ b/circle.yml
@@ -36,6 +36,7 @@ dependencies:
     - ./mvnw frontend:install-node-and-npm frontend:npm -pl zipkin-ui
   cache_directories:
     - "~/.npm"
+    - "zipkin/zipkin-ui/node_modules"
 
 database:
   override:
